--- a/Hito 3/Examen/Defensa/pom.xml
+++ b/Hito 3/Examen/Defensa/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.goowia</groupId>
-	<artifactId>appRest</artifactId>
+	<groupId>com.Hito3</groupId>
+	<artifactId>Defensa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>appRest</name>
-	<description>REST API using Spring</description>
+	<name>Defensa</name>
+	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -28,7 +28,6 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
